force-app/main/default/objects/Form_LCF_Grant_Outcome_1__c/Form_LCF_Grant_Outcome_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund Grant Management - Outcome - 1.0</description>
    <label>Form LCF Grant Outcome 1.0</label>
    <nameField>
        <displayFormat>GOU-{00000}</displayFormat>
        <label>Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grant Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>