force-app/main/default/objects/Form_LCF_Grant_Outcome_1__c/fields/ou_description__c.field-meta.xml
<CustomField>
    <fullName>ou_description__c</fullName>
    <inlineHelpText>Description</inlineHelpText>
    <label>OU - Description</label>
    <type>TextArea</type>
</CustomField>