force-app/main/default/objects/Form_LCF_Grant_Outcome_1__c/fields/ou_individual_cohort__c.field-meta.xml
<CustomField>
    <fullName>ou_individual_cohort__c</fullName>
    <inlineHelpText>is the measure at individual or at cohort level?</inlineHelpText>
    <label>OU - Individual/Cohort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Individual_Cohort</valueSetName>
    </valueSet>
</CustomField>