force-app/main/default/objects/Form_LCF_Grant_Outcome_1__c/fields/ou_measure__c.field-meta.xml
<CustomField>
    <fullName>ou_measure__c</fullName>
    <inlineHelpText>Agreed Outcome Measure</inlineHelpText>
    <label>OU - Measure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>