force-app/main/default/objects/Form_LCF_Grant_Outcome_1__c/fields/ou_number_of_metrics__c.field-meta.xml
<CustomField>
    <fullName>ou_number_of_metrics__c</fullName>
    <description>Number of metrics for this outcome</description>
    <inlineHelpText>Number of metrics for this outcome</inlineHelpText>
    <label>OU - Number of Metrics</label>
    <summaryForeignKey>Form_LCF_Outcome_Metric_1__c.grant_outcome__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>