force-app/main/default/objects/Form_LCF_Grant_Outcome_1__c/fields/ou_outcome_metrics__c.field-meta.xml
<CustomField>
    <fullName>ou_outcome_metrics__c</fullName>
    <inlineHelpText>Agreed outcome metrics - up to 3</inlineHelpText>
    <label>OU - Outcome Metrics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>