force-app/main/default/objects/Form_LCF_Grant_Outcome_1__c/fields/primary__c.field-meta.xml
<CustomField>
    <fullName>primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Primary outcome</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>